update routerLink all

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,29 +1,46 @@
-<div class="container" style="width: 800px;">
+<div class="container">
+    <div class="card-header">
+        <h1 class="text-center">Danh sách cuốn sách</h1>
+    </div>
+
     <div class="row">
-        <div class="card-header">
-            <h1>Thêm sách mới</h1>
+        <div class="col-md-4 mt-3 ">
+            <p style="display: inline">Có {{ count }} cuốn sách</p>
         </div>
-        <form [formGroup]="bookForm" (ngSubmit)="onSubmit()">
-            <div class="mb-3">
-                <label for="" class="form-label">Tên sách</label>
-                <input type="text" class="form-control" formControlName="name" />
-                <p *ngIf="!bookForm.controls['name']?.valid && (bookForm.controls['name']?.dirty
-          ||bookForm.controls['name']?.touched)" class="help-block text-danger">Vui lòng nhập tên sách</p>
-            </div>
-            <div class="mb-3">
-                <label for="" class="form-label">Tác giả</label>
-                <input type="text" class="form-control" formControlName="author" />
-                <p *ngIf="!bookForm.controls['author']?.valid && (bookForm.controls['author']?.dirty
-          ||bookForm.controls['author']?.touched)" class="help-block text-danger">Vui lòng nhập tên tác giả</p>
-            </div>
-            <div class="mb-3">
-                <label for="" class="form-label">Mô tả</label>
-                <textarea type="text" class="form-control" formControlName="description"></textarea>
-                <p *ngIf="!bookForm.controls['description']?.valid && (bookForm.controls['description']?.dirty
-          ||bookForm.controls['description']?.touched)" class="help-block text-danger">Vui lòng nhập tên tác giả</p>
-            </div>
-            <button type="submit" [disabled]="!bookForm.valid" class="btn btn-success">Lưu</button>
-            <button type="button" [routerLink]="['/books']" class="btn btn-danger">Thoát</button>
-        </form>
+        <div class="col-md-8 ">
+            <button type="button" style="margin-left: 710px;" [routerLink]="['/book-add']" class="btn btn-success mt-3">
+                Thêm sách mới
+            </button>
+        </div>
+    </div>
+    <div class="card-body">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Tên sách</th>
+                    <th>Tác giả</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let book of books; let i = index">
+                    <td>{{ book.id }}</td>
+                    <td>{{ book.name }}</td>
+                    <td>{{ book.author }}</td>
+                    <td class="text-center">
+                        <button class="btn btn-primary" [routerLink]="['/book-show', book.id]">
+                            Xem
+                        </button>
+                        <button class="btn btn-warning mx-2" [routerLink]="['/book-edit', book.id]">
+                            Sửa
+                        </button>
+                        <button class="btn btn-danger" [routerLink]="['/book-delete', book.id]">
+                            Xóa
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
