update delete edit show

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -29,10 +29,10 @@
                     <td>{{ book.name }}</td>
                     <td>{{ book.author }}</td>
                     <td class="text-center">
-                        <button class="btn btn-primary" [routerLink]="['book-show', book.id]">
+                        <button class="btn btn-primary" [routerLink]="['/book-show', book.id]">
                             Xem
                         </button>
-                        <button class="btn btn-warning mx-2" [routerLink]="['book-edit', book.id]">
+                        <button class="btn btn-warning mx-2" [routerLink]="['/book-edit', book.id]">
                             Sửa
                         </button>
                         <button class="btn btn-danger" [routerLink]="['/book-delete', book.id]">
