--- a/src/app/book-show/book-show.component.html
+++ b/src/app/book-show/book-show.component.html
@@ -1,1 +1,22 @@
-<p>book-show works!</p>
+<div class="container" style= "width: 600px;">
+    <div class="row">
+      <div class="card-header">
+        <h1 class= "card-title text-center text-danger">Chi tiết sách</h1>  
+        <div class="d-flex justify-content-end">
+          <button [routerLink]="['/books']" class="btn btn-primary " type="button">Xem danh sách</button>
+  
+        </div>
+      </div>
+      <div class="card-body">
+      <p> Tên sách : {{book.name}} </p>
+      <p> Tác giả: {{book.author}}</p>
+      <p> Mô tả: {{book.description}} </p>
+  
+      </div>
+      <div class="card-footer d-flex justify-content-end">
+    
+    </div>
+  </div>
+  
+  
+  
